The backend Course was completed

--- a/style.css
+++ b/style.css
@@ -35,3 +35,7 @@ p#card-title,
 #card-body {
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
+
+.buttonContainer .btn {
+    width: 32.96%;
+}
